--- a/style.css
+++ b/style.css
@@ -106,10 +106,6 @@ main {
 
 embed {
   height: 100vh;
-  /*filter: drop-shadow(
-    0 0 10px rgba(255, 255, 255, 0.23)
-
-  ); */
 }
 
 footer {
@@ -242,18 +238,6 @@ footer svg:hover {
   height: 350px;
 }
 
-.diploma-tecnologia {
-  display: inline-block;
-  transition: transform 0.4s ease;
-  color: white;
-  font-weight: bold;
-  text-decoration: none;
-  font-style: italic;
-}
-
-.diploma-tecnologia:hover {
-  transform: scale(1.3);
-}
 
 .title-practicante {
   display: flex;
@@ -286,17 +270,29 @@ footer svg:hover {
   align-items: center;
 }
 
-.certificado-personalsof {
-  display: inline-block;
+.courses{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 100px;
+}
+
+.courses-title{
+  display: flex;
+  align-items: center;
+  margin-bottom: 100px;
+}
+
+.courses img {
+  width: 600px;
+  margin: 30px;
   transition: transform 0.4s ease;
-  color: white;
-  font-weight: bold;
-  text-decoration: none;
-  font-style: italic;
 }
-.certificado-personalsof:hover {
-  transform: scale(1.3);
+.courses img:hover {
+  transform: scale(1.1);
 }
+
+
 
 h2 svg {
   height: 2.5rem;
