--- a/style.css
+++ b/style.css
@@ -46,20 +46,7 @@
   z-index: -1;
 
 }
-.area-interests{
-  background-color: #837804;  
-  background: -webkit-linear-gradient(to bottom, rgba(48, 50, 51, 0.86), #0b0d0f);  
-  width: 100%;
-  height:100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  box-sizing: border-box;
-  display: block;
-/*   background-image: linear-gradient(to bottom, rgba(48, 50, 51, 0.86), #0b0d0f); */
-  z-index: -1;
 
-}
 .area-projects{
   background-color: #751010;  
   background: -webkit-linear-gradient(to bottom, rgba(48, 50, 51, 0.86), #0b0d0f);  
@@ -189,18 +176,7 @@
   }
 
 }
-/* .background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box;
-  display: block;
-  background-color: #494040;
-  background-image: linear-gradient(to bottom, rgba(48, 50, 51, 0.86), #0b0d0f);
-  z-index: -1;
-} */
+
 
 svg {
   fill: white;
@@ -399,7 +375,6 @@ footer svg:hover {
 
 .info-aboutme h2 {
   font-size: 3rem;
-  border-bottom: 1px solid white;
 }
 
 
@@ -463,6 +438,7 @@ footer svg:hover {
   display: flex;
   align-items: center;
   transition: transform 0.4s ease;
+  margin-bottom: 4rem;
 }
 @media (max-width: 900px) {
   .experiencia-laboral  {
@@ -479,6 +455,99 @@ footer svg:hover {
   align-items: center;
 }
 
+/* Skills */
+
+.skills{
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.skills h3{
+  margin-bottom: 1rem;
+  font-size: 1.5rem;
+}
+
+.skills svg{
+  height: 100%;
+  aspect-ratio: 1;
+}
+
+
+.skills p{
+  color: black;
+}
+
+.svgbg{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 9rem;
+  aspect-ratio: 1;
+  background-color: white;
+  border-radius: 15px;
+  padding: 1rem;
+  transition: transform 0.4s ease;
+}
+
+.svgbg:hover{
+  transform: scale(1.1);
+}
+
+.skills-title{
+  margin-top: 1rem;
+  margin-bottom: 3rem;
+  border-bottom: 1px solid;
+}
+
+.data-analist{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
+.front-end{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  justify-content: center;
+  margin-bottom: 2rem;
+
+}
+
+.data-base{
+  display: flex;
+  gap: 1.5rem;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+.automatizadores{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
+.otroslenguajes{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
+.herramientas{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
+
 .courses{
   display: flex;
   flex-direction: column;
@@ -488,8 +557,10 @@ footer svg:hover {
 
 .courses-title{
   display: flex;
-  align-items: center;
+  justify-content: center;
   margin-bottom: 100px;
+  width: 100%;
+  border-bottom: 1px solid;
 }
 
 .courses img {
