--- a/style.css
+++ b/style.css
@@ -337,21 +337,71 @@ footer svg:hover {
   color: currentColor;
 }
 
-/* ABOUT ME PAGE */
 
-
-.about-me {
+.about-me-btn {
   display: flex;
   align-items: center;
   gap: 0.5rem;
   width: fit-content;
   transition: transform 0.4s ease;
   font-size: 1.2rem;
+  border: 1px solid white;
+  border-radius: 30px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  
 }
 
-.about-me:hover {
-  transform: scale(1.3);
+.about-me-btn:hover {
+  transform: scale(1.12);
 }
+
+.about-me-btn svg {
+  animation: bounce 1.3s both infinite;
+}
+
+.available-work{
+  display: flex;
+  align-items: center;
+  background-color: #272935;
+  gap: 8px;
+  width: fit-content;
+  font-size: 1.1rem;
+  border: 1px solid white;
+  border-radius: 30px;
+  padding-inline: 1rem;
+  position: relative;
+}
+.available-work::after{
+  background-color: #28da9c5c;
+  animation: pulse 1.9s both infinite;
+  position: absolute;
+  content: "";
+  height: 12px;
+  width: 12px;
+  border-radius: 99999px;
+  left: 14px;
+
+}
+.available-work::before{
+  flex-shrink: 0;
+  background-color: #28da9b;
+  animation: pulse 1.9s both infinite;
+  content: "";
+  height: 8px;
+  width: 8px;
+  border-radius: 99999px;
+}
+
+
+.about-work{
+  display: flex;
+  gap: 1rem;
+}
+
+/* ABOUT ME PAGE */
+
+
 
 .name-title__desc {
   margin-bottom: 3rem;
@@ -371,9 +421,7 @@ footer svg:hover {
 }
 
 
-.about-me svg {
-  animation: bounce 1s both infinite;
-}
+
 
 .iconos svg {
   width: 150px;
@@ -845,6 +893,28 @@ h2 svg {
   }
  }
 
+ @keyframes pulse {
+    0%
+    {
+      transform: scale(1);
+      opacity: 50%;
+    }
+    
+    80%
+    {
+      transform: scale(1.2);
+      opacity: 100%;
+    }
+
+
+    100%
+    {
+      transform: scale(1);
+      opacity: 50%;
+    }
+
+
+}
 
 @keyframes bounce {
   0% {
