--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 
 
 .area-index{
-  background-color: #251338ee;  
+  background-color: #0e021af5;   
   background: -webkit-linear-gradient(to bottom, rgba(48, 50, 51, 0.86), #0b0d0f);  
   width: 100%;
   height:100vh;
@@ -33,7 +33,7 @@
 }
 
 .area-aboutme{
-  background-color: #074780;  
+  background-color: rgb(3, 43, 84);  
   background: -webkit-linear-gradient(to bottom, rgba(48, 50, 51, 0.86), #0b0d0f);  
   width: 100%;
   height:100vh;
@@ -48,7 +48,7 @@
 }
 
 .area-projects{
-  background-color: #751010;  
+  background-color: #420f0f;  
   background: -webkit-linear-gradient(to bottom, rgba(48, 50, 51, 0.86), #0b0d0f);  
   width: 100%;
   height:100vh;
@@ -184,6 +184,7 @@ svg {
 }
 
 body {
+  
   cursor: none;
   display: flex;
   align-items: center;
@@ -198,7 +199,8 @@ body {
 }
 
 .aboutme-title {
- font-size: clamp(6px, 6vw, 40px); 
+  font-style: italic;
+  font-size: clamp(6px, 6vw, 40px); 
   text-align: center;
 }
 
@@ -222,8 +224,18 @@ nav {
   width: clamp(0px, 100vw, 1000px);
   height: 2rem;
   padding: 2rem;
-
 }
+
+nav img{
+  height: 15px;
+}
+
+.change-language{
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+
 
 
 
