--- a/style.css
+++ b/style.css
@@ -703,26 +703,35 @@ footer svg:hover {
 }
 
 
-.courses{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 100px;
-}
-
 .courses-title{
   display: flex;
   justify-content: center;
-  margin-bottom: 100px;
+  margin-bottom: 2rem;
   width: 100%;
   border-bottom: 1px solid;
   font-family: AcornBold;
 }
 
+.courses-container{
+  display: grid;
+  
+  justify-content: center;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+
+}
+.courses-container div{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
 .courses img {
-  width: clamp(7px, 85vw, 600px); 
-  margin: 30px;
+  width: 90%;
   transition: transform 0.4s ease;
+  border-radius: 20px;
+
 }
 .courses img:hover {
   transform: scale(1.1);
