Co-authored-by: daezen <me@daezen.co>

--- a/style.css
+++ b/style.css
@@ -611,98 +611,104 @@ footer svg:hover {
 
 /* Skills */
 
-.skills{
-  text-align: center;
-  margin-bottom: 1rem;
-}
-
-.skills h3{
-  margin-bottom: 1rem;
-  font-size: 1.5rem;
-}
-
-.skills svg{
-  height: 100%;
-  aspect-ratio: 1;
-}
-
-
-.skills p{
-  color: black;
-}
-
-.svgbg{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  height: 9rem;
-  aspect-ratio: 1;
-  background-color: white;
-  border-radius: 15px;
-  padding: 1rem;
-  transition: transform 0.4s ease;
-}
-
-.svgbg:hover{
-  transform: scale(1.1);
-}
-
 .skills-title{
-  margin-top: 1rem;
-  margin-bottom: 3rem;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2rem;
+  width: 100%;
   border-bottom: 1px solid;
   font-family: AcornBold;
 }
 
-.data-analist{
+.skills {
   display: flex;
-  flex-wrap: wrap;
-  gap: 1.5rem;
+  align-items: center;
+  flex-direction: column;
   justify-content: center;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
 }
 
-.front-end{
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1.5rem;
-  justify-content: center;
-  margin-bottom: 2rem;
-
+.skills-container{
+  width: 750px;
+  display: grid;
+  grid-template-columns: 1fr 1fr ;
+  grid-template-rows: 1fr 1fr ;
+  gap: 2rem;
 }
 
-.data-base{
-  display: flex;
-  gap: 1.5rem;
-  justify-content: center;
-  margin-bottom: 2rem;
-}
-.automatizadores{
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1.5rem;
-  justify-content: center;
-  margin-bottom: 2rem;
-}
-
-.otroslenguajes{
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1.5rem;
-  justify-content: center;
-  margin-bottom: 2rem;
-}
-
-.herramientas{
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1.5rem;
-  justify-content: center;
-  margin-bottom: 2rem;
+.skills-container > div{
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 50px 1fr 1fr;
+  background-color: #03111e;
+  border-radius: 10px;
+  color: #ffffff;
+  border: 1px solid rgba(52, 116, 205, 0.629);
+  transition: all .5s;
 }
 
 
+.skills-container h3{
+  grid-column: span 3;
+  font-size: 30px;
+  text-align: center;
+}
+.skills-container p{
+  font-size: .9rem;
+}
+
+
+.skill-icons {
+  gap: 8px;
+  width: 100px;
+  display: flex;
+  aspect-ratio: 1;
+  text-align: center;
+  border-radius: .5em;
+  align-items: center;
+  align-content: center;
+  flex-direction: column;
+  justify-content: center;
+  padding: .5em;
+}
+
+.skill-icons svg{
+  --size: 60px;
+  width: var(--size);
+  height: var(--size);
+}
+
+.data-analist h3{
+  background: -webkit-linear-gradient(#ffae00 50%, hsl(0, 0%, 100%));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.frontend h3{
+  background: -webkit-linear-gradient(#00bbff 50%, hsl(0, 0%, 100%));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.backend h3{
+  background: -webkit-linear-gradient(#00ff9d 50%, hsl(0, 0%, 100%));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.lenguajes h3{
+  background: -webkit-linear-gradient(#fd6412 75%, hsla(0, 0%, 100%, 0.583));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.herramientas h3{
+  background: -webkit-linear-gradient(#9642d7 50%, hsla(0, 0%, 100%, 0.459));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
+/* COURSES */
 .courses-title{
   display: flex;
   justify-content: center;
@@ -714,7 +720,6 @@ footer svg:hover {
 
 .courses-container{
   display: grid;
-  
   justify-content: center;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
